--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1>Hola Mundo123</h1>
     <h2>Titulo 2</h2>
+    <h2>Titulo 3</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos accusantium qui aspernatur veniam beatae nisi delectus repudiandae soluta neque nihil eum minima inventore, itaque at distinctio quae odio quibusdam quam.</p>
 </body>
 </html>
